bpo-36333: Fix leaks in pymain_init and _PyPreConfig_ReadFromArgv